2025-02-26@22:09 - Fixed a, ul and li stylings being applied to FloatingTOC by overriding their styles in FloatingTOC. - Fixed link alignment issue on mobile in FloatingTOC caused by an empty ul element with a margin being rendered. - Moved styling for bullet-point-hack in FloatingTOC to <styles> in order to not have inconsistent styling in static, mobile and dekstop version. - Set bullet-point styling to none in Navigation component. - Set link styling to only show when hovered in NavigationController. - Moved a, ul and li styling from Layout to global.css.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,8 +52,16 @@ button {
 	@apply btn;
 }
 
+ul {
+	@apply list-disc list-outside pl-10 leading-loose [&>li::marker]:text-secondary [&>li::marker]:text-lg;
+}
+
 ol {
-	@apply list-decimal list-outside pl-10 leading-loose [&>li::marker]:text-secondary [&>li::marker]:text-lg ;
+	@apply list-decimal list-outside pl-10 leading-loose [&>li::marker]:text-secondary [&>li::marker]:text-lg;
+}
+
+a {
+	@apply link text-secondary;
 }
 
 .btn {
